# qiree

./: CMakeLists.txt  README.md
.github/workflows/: build-fast.yml
app/: qir-xacc.cc
cmake/: support_catalyst.cmake
doc/_static/: references.bib
doc/main/: acknowledgments.rst  installation.rst  introduction.rst  usage.rst
scripts/: lightning-path.sh
src/cqiree/: QireeManager.cc  QireeManager.hh
src/qiree/: Module.cc  Module.hh
src/qirlightning/: CMakeLists.txt  LightningQuantum.cc  LightningQuantum.hh  LightningRuntime.cc  README.md
src/qirqsim/: QsimQuantum.cc
src/qirxacc/: XaccDefaultRuntime.cc  XaccDefaultRuntime.hh  XaccQuantum.cc  XaccQuantum.hh
test/qirxacc/: XaccQuantum.test.cc
